force-app/main/default/objects/Additional_Org_Metrics__c/Additional_Org_Metrics__c.object-meta.xml
<CustomObject>
    <label>Additional Org Metric</label>
    <nameField>
        <displayFormat>AOM-{00000}</displayFormat>
        <label>Additional Org Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Org Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>