force-app/main/default/objects/Additional_Org_Metrics__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>LimitsFieldsCustom</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>CodeUsageImprove</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>ExperienceUser</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Reports And Dashboards</fullName>
            </value>
            <value>
                <fullName>Increase User Adoption</fullName>
            </value>
            <value>
                <fullName>Improve Org Security</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Objects</fullName>
            </value>
            <value>
                <fullName>Org Limit</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>