force-app/main/default/objects/Additional_Org_Metrics__c/fields/Feature_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Type__c</fullName>
    <label>Feature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned Page Layouts</fullName>
            </value>
            <value>
                <fullName>Unassigned Record Types</fullName>
            </value>
            <value>
                <fullName>Field Usage</fullName>
            </value>
            <value>
                <fullName>Inactive Workflow Rules</fullName>
            </value>
            <value>
                <fullName>Inactive Validation Rules</fullName>
            </value>
            <value>
                <fullName>Active Validation Rules</fullName>
            </value>
            <value>
                <fullName>Critical Permission Assignments</fullName>
            </value>
            <value>
                <fullName>Unused Reports</fullName>
            </value>
            <value>
                <fullName>PathLightning Sales Console</fullName>
            </value>
            <value>
                <fullName>Formula Fields with JavaScript Code</fullName>
            </value>
            <value>
                <fullName>Unused Dashboards</fullName>
            </value>
            <value>
                <fullName>Macros</fullName>
            </value>
            <value>
                <fullName>API Versions</fullName>
            </value>
            <value>
                <fullName>Fields on Page Layouts</fullName>
            </value>
            <value>
                <fullName>Multiple Apex Triggers per Object</fullName>
            </value>
            <value>
                <fullName>Unassigned Permission Sets</fullName>
            </value>
            <value>
                <fullName>Files Adoption</fullName>
            </value>
            <value>
                <fullName>Active Validation Rule Limits</fullName>
            </value>
            <value>
                <fullName>News and Twitter</fullName>
            </value>
            <value>
                <fullName>File Storage Limits</fullName>
            </value>
            <value>
                <fullName>Disable Debug Mode</fullName>
            </value>
            <value>
                <fullName>Unassigned Roles</fullName>
            </value>
            <value>
                <fullName>Details Tab on Record Pages</fullName>
            </value>
            <value>
                <fullName>S-Controls</fullName>
            </value>
            <value>
                <fullName>Active Workflow Rule Limits</fullName>
            </value>
            <value>
                <fullName>Inactive Chatter Users</fullName>
            </value>
            <value>
                <fullName>Omni-Channel</fullName>
            </value>
            <value>
                <fullName>Lightning Components on Record Lightning Pages</fullName>
            </value>
            <value>
                <fullName>Case Feed</fullName>
            </value>
            <value>
                <fullName>Migrating Workflow Rules to Flow Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>