force-app/main/default/objects/Additional_Org_Metrics__c/fields/Flow_Execution_Times__c.field-meta.xml
<CustomField>
    <fullName>Flow_Execution_Times__c</fullName>
    <label>Flow Execution Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>