force-app/main/default/objects/Additional_Org_Metrics__c/fields/Flow_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Last_Run__c</fullName>
    <label>Flow Last Run</label>
    <type>DateTime</type>
</CustomField>