force-app/main/default/objects/Additional_Org_Metrics__c/fields/Flow_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Process_Type__c</fullName>
    <label>Flow Process Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>