force-app/main/default/objects/Additional_Org_Metrics__c/fields/Flow_Runtime_Duration__c.field-meta.xml
<CustomField>
    <fullName>Flow_Runtime_Duration__c</fullName>
    <label>Flow Runtime Duration</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>