force-app/main/default/objects/Additional_Org_Metrics__c/fields/Flow_Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Trigger_Type__c</fullName>
    <label>Flow Trigger Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>