force-app/main/default/objects/Additional_Org_Metrics__c/fields/Limit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Limit_Remaining__c</fullName>
    <label>Limit Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>