force-app/main/default/objects/Additional_Org_Metrics__c/fields/Limit_Used__c.field-meta.xml
<CustomField>
    <fullName>Limit_Used__c</fullName>
    <formula>Limit_Max__c - Limit_Remaining__c</formula>
    <label>Limit Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>