force-app/main/default/objects/Additional_Org_Metrics__c/fields/Number_of_Old_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Old_Records__c</fullName>
    <label>Number of Old Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>