force-app/main/default/objects/Additional_Org_Metrics__c/fields/Part_of_Managed_Package__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Managed_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Managed Package</label>
    <type>Checkbox</type>
</CustomField>