force-app/main/default/objects/Additional_Org_Metrics__c/fields/Percentage_Unused__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Unused__c</fullName>
    <formula>Records_where_not_Used__c/Total_Records__c</formula>
    <label>Percentage Unused</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>