force-app/main/default/objects/Additional_Org_Metrics__c/fields/Process_Builder_Versions__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Versions__c</fullName>
    <label>Process Builder Versions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>