force-app/main/default/objects/Additional_Org_Metrics__c/fields/Records_where_Used__c.field-meta.xml
<CustomField>
    <fullName>Records_where_Used__c</fullName>
    <label>Records where Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>