force-app/main/default/objects/Additional_Org_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Feature_Type__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>